--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ function loadImage() {
       'Trust_in_Science_Vis':{title:"Trust in Science",'blurb':'My research on trust in science explores the aspects of visualizations that promote or hinder the establishment of trust in science. '},
       'Provenance_Visualization':{title:'Provenance Analysis','blurb':'My research on Provenance analysis investigates how detailed provenance tracking and analysis can provide insights into the interaction patterns that viewers employ when using new and complex visualizations. '},
       'Multivariate_Graph_Visualization':{title:'Multivariate Network Visualization','blurb':'My research on multivariate networks explores novel way of visualizing multivariate graphs, incorporating interaction as a key compoment of reducing visual complexity in large networks.'},
-      'Experiential_Learning_For_Visualization':{title: 'Experiential Learning','blurb':'My research on Experiential Learning investigates who applying guided learning activities allows users of varying degrees of visual literacy to learn and interact with new and complex visualizations.'}
+      'Experiential_Learning_For_Visualization':{title: 'Experiential Learning','blurb':'My research on Experiential Learning investigates how applying guided learning activities allows users of varying degrees of visual literacy to learn and interact with new and complex visualizations.'}
     }
     console.log('labels', labels)
     let areaLabels = d3.select('svg').selectAll(labels)
