--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
          <p>
           I am a Postdoctoral Fellow with the <a target="_blank" href="https://vcg.seas.harvard.edu/">Visual Computing Group </a>at the School of Engineering and Applied Sciences at Harvard University. 
+          My current research projects focus on empirical studies to better understand how viewers make sense of unfamiliar visualizations. 
          </p> 
 
          <p>
@@ -335,7 +336,7 @@ function loadImage() {
       },
       'Multivariate_Graph_Visualization':
        { title: 'Multivariate Network Visualization', 
-       'blurb': 'My research on multivariate networks explores novel way of visualizing multivariate graphs, incorporating interaction as a key compoment of reducing visual complexity in large networks.' ,
+       'blurb': 'My research on multivariate networks explores novel way of visualizing multivariate graphs, incorporating interaction as a key component of reducing visual complexity in large networks.' ,
        pubs:'' 
       },
       'Experiential_Learning_For_Visualization':
